Add transition to remove abrupt color change
The text color change of the buttons is rather abrupt. This ensures that the change happens smoothly and goes with the animation of the button.

--- a/css/contributors.css
+++ b/css/contributors.css
@@ -83,6 +83,7 @@ a:hover {
   text-overflow: ellipsis;
   overflow: hidden;
   white-space: nowrap;
+  transition: color 0.5s ease-in;
 }
 
 @media (min-width: 768px) {
