changed stripe backgroun color

--- a/css/colorgame.css
+++ b/css/colorgame.css
@@ -40,8 +40,8 @@ h1 {
 }
 
 #stripe {
-  background-color: white;
-  height: 30px;
+  background-color: gray;
+  height: 45px;
   text-align: center;
 }
 
