Changed the body color and added my name to contributors.html file

--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@ body {
   max-width: 650px;
   line-height: 1.6;
   font-size: 18px;
-  color: #444;
+  color: rgb(25, 4, 218);
   padding: 0 15px;
 }
 
