--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@ body {
   max-width: 650px;
   line-height: 1.6;
   font-size: 18px;
-  color: rgb(25, 4, 218);
+  color: #333333;
   padding: 0 15px;
 }
 
