--- a/css/contributors.css
+++ b/css/contributors.css
@@ -1,5 +1,5 @@
-@import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800&subset=latin-ext');
-@import url('https://fonts.googleapis.com/css?family=Montserrat:400,500,600,700,800,900&subset=latin-ext');
+@import url("https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800&subset=latin-ext");
+@import url("https://fonts.googleapis.com/css?family=Montserrat:400,500,600,700,800,900&subset=latin-ext");
 
 *,
 *::before,
@@ -20,8 +20,13 @@ html {
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
 }
-h1,h2,h3,h4,h5,h6 {
-  font-family: 'Montserrat',sans-serif;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: "Montserrat", sans-serif;
   line-height: 1.5;
 }
 html,
@@ -41,7 +46,7 @@ body {
   min-height: 100vh;
   padding: 0 0 1.5rem;
   position: relative;
-  font-family: "Open Sans",sans-serif;
+  font-family: "Open Sans", sans-serif;
   font-size: 16px;
 }
 
@@ -62,6 +67,7 @@ a:hover {
 .content {
   margin-top: 80px;
 }
+
 .box {
   position: relative;
   display: flex;
@@ -71,7 +77,7 @@ a:hover {
 .box-item {
   position: relative;
   display: block;
-  background-color: #FEEEF2;
+  background-color: #feeef2;
   color: #444;
   font-weight: 600;
   width: 100%;
@@ -87,7 +93,6 @@ a:hover {
 }
 
 @media (min-width: 768px) {
-
   .box {
     display: flex;
     flex-wrap: wrap;
@@ -100,7 +105,6 @@ a:hover {
 }
 
 @media (min-width: 1100px) {
-
   .box-item {
     width: calc(25% - 20px);
   }
@@ -122,7 +126,7 @@ a:hover {
   display: table;
   clear: both;
 
-  background: #FE0C43;
+  background: #fe0c43;
   z-index: 5;
   transition: left 1s cubic-bezier(0.86, 0, 0.07, 1);
 }
@@ -131,7 +135,7 @@ a:hover {
 .box-item::before {
   position: absolute;
   content: "";
-  color: #fff;
+  color: rgb(253, 253, 253);
   font-size: 1rem;
   padding: 15px 8px 15px 70px;
   top: 0;
@@ -177,7 +181,7 @@ a:hover {
 }
 
 .box-item.different-color:hover {
-  background-color: #FE0C43;
+  background-color: #fe0c43;
 }
 
 ::-webkit-scrollbar {
@@ -192,4 +196,47 @@ a:hover {
   background-color: #c1c1c1;
   outline: none;
   border-radius: 0;
+}
+.header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.heading {
+  flex: 80%;
+}
+.theme-switch {
+  box-sizing: content-box;
+  width: 70px;
+  height: 30px;
+  border: 2px solid #fe0c43;
+  /* background: #fe0c43; */
+  border-radius: 50px;
+  position: relative;
+}
+.switch {
+  background: #fe0c43;
+  width: 24px;
+  height: 24px;
+
+  border-radius: 100%;
+  position: absolute;
+  top: 3px;
+  left: 4px;
+  transition: 0.5s all ease;
+}
+.dark-theme {
+  background-color: #3c3838;
+}
+.dark-theme .theme-switch {
+  background: #fe0c43;
+}
+.dark-theme .theme-switch .switch {
+  transform: translateX(37px);
+  background: white;
+}
+.dark-theme .box-item,
+.dark-theme .box-item::after {
+  background-color: #7a7476;
+  color: white;
 }
