--- a/css/contributors.css
+++ b/css/contributors.css
@@ -4,7 +4,7 @@
   --white: white;
   --black: rgb(39 41 52);
   --gray: #fafafa;
-  --text: #229383;
+  --text: black;
   --box: #feeef2;
   --box-hover: #fe0c43;
   --nav-color: white;
