--- a/css/footer.css
+++ b/css/footer.css
@@ -73,6 +73,7 @@
     animation: backToTopScrollingAnimation .8s infinite;
     animation-timing-function: linear;
 }
+
 @keyframes backToTopShowAnim{
     0%{transform: scale(0)}
     50%{transform: scale(1.3)}
@@ -81,4 +82,35 @@
 @keyframes backToTopScrollingAnimation{
     from{transform: rotate(0deg)}
     to{transform: rotate(360deg)}
+}
+
+.to-top{
+    background: #f8d968;
+    background-size: 100%;
+    position: fixed;
+    bottom: 1vw;
+    right: 3vw;
+    width: 3vw;
+    height: 3vw;
+    border-radius: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 1vw;
+    color: black;
+    text-decoration: none;
+    opacity: 0;
+    transition: all 0.2s;
+}
+
+.to-top.activetop{
+    bottom: 3vw;
+    pointer-events: auto;
+    opacity: 1;
+    text-decoration: none;
+}
+
+.to-top:hover{
+    color: white;
+    cursor: pointer;
 }
