--- a/css/explosion.css
+++ b/css/explosion.css
@@ -1,18 +1,25 @@
-  .explosion 
-  {position: absolute;
+.explosion {
+  position: absolute;
   width: 600px;
   height: 600px;
-  pointer-events: none;}
-  .explosion .particle
-  {position: absolute;
+  pointer-events: none;
+}
+.explosion .particle {
+  position: absolute;
   width: 10px;
   height: 10px;
   border-radius: 50%;
-  animation: pop 1s reverse forwards;}
+  animation: pop 1s reverse forwards;
+}
 
 @keyframes pop {
-  from{opacity: 0;}
-  to{top: 50%;
+  from {
+    opacity: 0;
+  }
+  to {
+    top: 50%;
     left: 50%;
-    opacity: 1;}
+    opacity: 1;
+  }
+}
 
