Added lime background color to stats section
I have added this commit to make it look good,
Thank You

--- a/css/contributors.css
+++ b/css/contributors.css
@@ -290,7 +290,7 @@ input:checked + .slider:before {
   background-color: yellow;
 }
 #stats {
-  background-color: #eeeeee;
+  background-color: #00FF00;
   padding: 20px;
   border-radius: 20px;
   display: flex;
