--- a/css/contributors.css
+++ b/css/contributors.css
@@ -295,8 +295,12 @@ input:checked + .slider:before {
   border-radius: 20px;
   display: flex;
   justify-content: center;
+  color: black;
 }
 
 #stats a {
   padding: 0 5px;
+  color: #4835f7;
+  text-decoration: underline;
+  
 }
