--- a/css/navbar.css
+++ b/css/navbar.css
@@ -1,8 +1,10 @@
 .navbar {
-  padding: 0.4rem 2rem;
+  padding: 0.6rem 2.1rem;
+  font-family: 'Courier New', Courier, monospace;
 }
 nav {
   background-color: var(--nav-color);
+  
 }
 .navbar-nav {
   width: 100%;
