--- a/css/contributors.css
+++ b/css/contributors.css
@@ -130,6 +130,7 @@ a:hover {
   overflow: hidden;
   white-space: nowrap;
   transition: color 0.5s ease-in;
+  font-family: Chewy;
 }
 
 @media (min-width: 768px) {
