--- a/css/contributors.css
+++ b/css/contributors.css
@@ -278,6 +278,7 @@ input:checked + .slider {
   background-color: rgb(163, 163, 163);
   background-image: linear-gradient(midnightblue, rebeccapurple);
 }
+
 input:checked + .slider:before {
   transform: translateX(26px);
   background-color: grey;
@@ -300,3 +301,9 @@ input:checked + .slider:before {
 #stats a {
   padding: 0 5px;
 }
+
+.mode-toggle{
+  display: flex;
+  flex-direction: row;
+}
+
