--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,10 @@
 body {
-  margin: 40px auto;
-  max-width: 650px;
-  line-height: 1.6;
+  margin: 50px auto;
+  max-width: 700px;
+  line-height: 1.8;
   font-size: 18px;
-  color: #333333;
-  padding: 0 15px;
+  color: #33333;
+  padding: 0 34px;
 }
 
 h1,
@@ -12,4 +12,5 @@ h2,
 h3 {
   font-size: 45px;
   line-height: 1.2;
+  font-style:bold;
 }
