--- a/css/contributors.css
+++ b/css/contributors.css
@@ -4,7 +4,7 @@
   --white: white;
   --black: rgb(39 41 52);
   --gray: #fafafa;
-  --text: #229383;
+  --text: black;
   --box: #feeef2;
   --box-hover: #fe0c43;
   --nav-color: white;
@@ -210,6 +210,7 @@ a:hover {
   float: left;
   margin-right: 15px;
   padding: 4px;
+  border-radius: 50%;
 }
 
 .box-item:hover a {
@@ -244,50 +245,53 @@ a:hover {
   align-items: center;
 }
 .theme-switch {
-  display: inline-block;
+  padding: 0 6px;
+  display: flex;
   height: 34px;
   position: relative;
   width: 60px;
+  justify-content: space-between;
+  border-style: solid;
+  border-radius: 34px;
+  align-items: center;
 }
 .theme-switch input {
   display: none;
 }
+
 .slider {
-  background-color: #999;
-  background-image: linear-gradient(aqua, skyblue);
+  background-color: transparent;
   bottom: 0;
   cursor: pointer;
   left: 0;
   position: absolute;
   right: 0;
   top: 0;
-  margin:auto;
+  margin: auto;
   transition: 0.4s;
 }
 .slider:before {
-  background-color: white;
+  background-color: rgb(255, 209, 4);
   bottom: 4px;
   content: "";
-  height: 26px;
+  height: 24px;
   left: 4px;
   position: absolute;
   transition: 0.4s;
-  width: 26px;
+  width: 24px;
 }
 input:checked + .slider {
-  background-color: rgb(163, 163, 163);
-  background-image: linear-gradient(midnightblue, rebeccapurple);
+  background-color: transparent;
 }
 input:checked + .slider:before {
-  transform: translateX(26px);
-  background-color: grey;
+  transform: translateX(23px);
+  background-color: white;
 }
 .slider.round {
   border-radius: 34px;
 }
 .slider.round:before {
   border-radius: 50%;
-  background-color: yellow;
 }
 #stats {
   background-color: #eeeeee;
@@ -300,3 +304,274 @@ input:checked + .slider:before {
 #stats a {
   padding: 0 5px;
 }
+   .word {
+      font-family: 'Anton', sans-serif;
+      perspective: 1000px;
+    }
+
+    .word span {
+      cursor: pointer;
+      display: inline-block;
+      font-size: 8vw;
+      user-select: none;
+      line-height: .8;
+    }
+
+    .word span:nth-child(1).active {
+      animation: balance 1.5s ease-out;
+      transform-origin: bottom left;
+    }
+
+    @keyframes balance {
+
+      0%,
+      100% {
+        transform: rotate(0deg);
+      }
+
+      30%,
+      60% {
+        transform: rotate(-45deg);
+      }
+    }
+
+    .word span:nth-child(2).active {
+      animation: shrinkjump 1s ease-in-out;
+      transform-origin: bottom center;
+    }
+
+    @keyframes shrinkjump {
+
+      10%,
+      35% {
+        transform: scale(2, .2) translate(0, 0);
+      }
+
+      45%,
+      50% {
+        transform: scale(1) translate(0, -150px);
+      }
+
+      80% {
+        transform: scale(1) translate(0, 0);
+      }
+    }
+
+    .word span:nth-child(3).active {
+      animation: falling 2s ease-out;
+      transform-origin: bottom center;
+    }
+
+    @keyframes falling {
+      12% {
+        transform: rotateX(240deg);
+      }
+
+      24% {
+        transform: rotateX(150deg);
+      }
+
+      36% {
+        transform: rotateX(200deg);
+      }
+
+      48% {
+        transform: rotateX(175deg);
+      }
+
+      60%,
+      85% {
+        transform: rotateX(180deg);
+      }
+
+      100% {
+        transform: rotateX(0deg);
+      }
+    }
+
+    .word span:nth-child(4).active {
+      animation: rotate 1s ease-out;
+    }
+
+    @keyframes rotate {
+
+      20%,
+      80% {
+        transform: rotateY(180deg);
+      }
+
+      100% {
+        transform: rotateY(360deg);
+      }
+    }
+
+    .word span:nth-child(5).active {
+      animation: toplong 1.5s linear;
+    }
+
+    @keyframes toplong {
+
+      10%,
+      40% {
+        transform: translateY(-48vh) scaleY(1);
+      }
+
+      90% {
+        transform: translateY(-48vh) scaleY(4);
+      }
+    }
+
+
+    .word span:nth-child(6).active {
+      animation: balance 1.5s ease-out;
+      transform-origin: bottom left;
+    }
+
+    @keyframes balance {
+
+      0%,
+      100% {
+        transform: rotate(0deg);
+      }
+
+      30%,
+      60% {
+        transform: rotate(-45deg);
+      }
+    }
+
+    .word span:nth-child(7).active {
+      animation: shrinkjump 1s ease-in-out;
+      transform-origin: bottom center;
+    }
+
+    @keyframes shrinkjump {
+
+      10%,
+      35% {
+        transform: scale(2, .2) translate(0, 0);
+      }
+
+      45%,
+      50% {
+        transform: scale(1) translate(0, -150px);
+      }
+
+      80% {
+        transform: scale(1) translate(0, 0);
+      }
+    }
+
+    .word span:nth-child(8).active {
+      animation: falling 2s ease-out;
+      transform-origin: bottom center;
+    }
+
+    @keyframes falling {
+      12% {
+        transform: rotateX(240deg);
+      }
+
+      24% {
+        transform: rotateX(150deg);
+      }
+
+      36% {
+        transform: rotateX(200deg);
+      }
+
+      48% {
+        transform: rotateX(175deg);
+      }
+
+      60%,
+      85% {
+        transform: rotateX(180deg);
+      }
+
+      100% {
+        transform: rotateX(0deg);
+      }
+    }
+
+    .word span:nth-child(9).active {
+      animation: rotate 1s ease-out;
+    }
+
+    @keyframes rotate {
+
+      20%,
+      80% {
+        transform: rotateY(180deg);
+      }
+
+      100% {
+        transform: rotateY(360deg);
+      }
+    }
+
+    .word span:nth-child(10).active {
+      animation: toplong 1.5s linear;
+    }
+
+    @keyframes toplong {
+
+      10%,
+      40% {
+        transform: translateY(-48vh) scaleY(1);
+      }
+
+      90% {
+        transform: translateY(-48vh) scaleY(4);
+      }
+    }
+
+    .word span:nth-child(11).active {
+      animation: balance 1.5s ease-out;
+      transform-origin: bottom left;
+    }
+
+    @keyframes balance {
+
+      0%,
+      100% {
+        transform: rotate(0deg);
+      }
+
+      30%,
+      60% {
+        transform: rotate(-45deg);
+      }
+    }
+
+    .word span:nth-child(12).active {
+      animation: shrinkjump 1s ease-in-out;
+      transform-origin: bottom center;
+    }
+
+    @keyframes shrinkjump {
+
+      10%,
+      35% {
+        transform: scale(2, .2) translate(0, 0);
+      }
+
+      45%,
+      50% {
+        transform: scale(1) translate(0, -150px);
+      }
+
+      80% {
+        transform: scale(1) translate(0, 0);
+      }
+    }
+
+    @media (max-width:1024px) {
+      .word span {
+        cursor: pointer;
+        display: inline-block;
+        font-size: 5vw;
+        user-select: none;
+        line-height: .8;
+      }
+    }
