Changed the color of header to Golden rod when it is in Dark mode and while hovering to header it changes color to golden

--- a/css/navbar.css
+++ b/css/navbar.css
@@ -47,6 +47,7 @@ nav {
   transition: width 0.2s ease-in-out;
   width: 0;
 }
+
 .navbar-light .navbar-nav .nav-social::before {
   content: none;
 }
@@ -103,5 +104,5 @@ nav {
 }
 
 .navbar-light .navbar-nav .nav-link:hover {
-  color: #ff0844;
+  color: purple;
 }
