Made changes to the contributor.css.Text visible in both modes

--- a/css/contributors.css
+++ b/css/contributors.css
@@ -7,7 +7,7 @@
   --text: black;
   --box: #feeef2;
   --box-hover: #fe0c43;
-  --nav-color: white;
+  --nav-color: rgb(255, 230, 230);
   --footer-color: #ced4da;
 }
 [data-theme="dark"] {
@@ -19,6 +19,7 @@
   --box-hover: rgb(57 148 255);
   --nav-color: #1e1e28;
   --footer-color: #6c757d;
+  --container-text: #ffb3c6;
 }
 *,
 *::before,
@@ -100,8 +101,9 @@ body {
 
 .container {
   position: relative;
-  color: var(--text);
+  color: var(--container-text);
 }
+
 canvas {
   cursor: crosshair;
   display: block;
