--- a/css/contributors.css
+++ b/css/contributors.css
@@ -124,18 +124,14 @@ a:hover {
   cursor: default;
   font-size: 2rem;
   font-family: "Special Elite", cursive;
-  color: white;
-  color: goldenrod;
-  background-size: 100%;
 }
-
 
 .moto {
   font-size: 22px;
   cursor: default;
 }
 .heading:hover {
-  color:gold;
+  color: #fe0c43;
   transition: 1s;
 }
 .moto:hover {
