--- a/css/contributors.css
+++ b/css/contributors.css
@@ -8,7 +8,7 @@
   --box: #feeef2;
   --box-hover: #fe0c43;
   --nav-color: rgb(255, 230, 230);
-  --footer-color: #999999;
+  --footer-color: #bbbbbb;
 }
 [data-theme="dark"] {
   --white: rgb(39 41 52);
@@ -18,7 +18,7 @@
   --box: rgb(61 63 73);
   --box-hover: rgb(57 148 255);
   --nav-color: #1e1e28;
-  --footer-color: #999999;
+  --footer-color: #bbbbbb;
   --container-text: #ffb3c6;
 }
 *,
