colors enhanced in footer

--- a/css/contributors.css
+++ b/css/contributors.css
@@ -8,7 +8,7 @@
   --box: #feeef2;
   --box-hover: #fe0c43;
   --nav-color: rgb(255, 230, 230);
-  --footer-color: #bbbbbb;
+  --footer-color: #ededed;
 }
 [data-theme="dark"] {
   --white: rgb(39 41 52);
@@ -18,8 +18,8 @@
   --box: rgb(61 63 73);
   --box-hover: rgb(57 148 255);
   --nav-color: #1e1e28;
-  --footer-color: #bbbbbb;
-  --container-text: #ffb3c6;
+  --footer-color: #ededed;
+  --container-text: #fc9fb6;
 }
 *,
 *::before,
@@ -605,7 +605,7 @@ input:checked + .slider:before {
 }
 :root {
   --darkbg: #251d29;
-  --darkt: #ffd1f7;
+  --darkt: #ff99ee;
   --lightbg: #fff;
   --lightt: #d43370;
 
