container-text color restored

--- a/css/contributors.css
+++ b/css/contributors.css
@@ -19,7 +19,7 @@
   --box-hover: rgb(57 148 255);
   --nav-color: #1e1e28;
   --footer-color: #ededed;
-  --container-text: #fc9fb6;
+  --container-text: #ffb3c6;
 }
 *,
 *::before,
