--- a/css/contributors.css
+++ b/css/contributors.css
@@ -134,6 +134,7 @@ a:hover {
   color: #fe0c43;
   transition: 1s;
 }
+
 .moto:hover {
   text-decoration: underline;
   text-decoration-color: var(--gray);
@@ -149,6 +150,7 @@ a:hover {
   display: flex;
   flex-wrap: wrap;
 }
+
 
 .box-item {
   position: relative;
@@ -166,6 +168,14 @@ a:hover {
   overflow: hidden;
   white-space: nowrap;
   transition: color 0.5s ease-in;
+}
+
+.box-item:hover{
+  transform: scale(1.05);
+  transition: 1s;
+}
+.box-item:hover span{
+  color: navy;
 }
 
 @media (min-width: 768px) {
