Added name and edited scroll behavior in css

--- a/css/contributors.css
+++ b/css/contributors.css
@@ -29,6 +29,7 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   transition: 0.05s;
+  scroll-behavior: smooth;
 }
 ::selection {
   background-color: #4835f7;
