--- a/css/contributors.css
+++ b/css/contributors.css
@@ -681,21 +681,24 @@ body {
 }
 
 #myBtn {
+  border-radius: 60px;
+  -webkit-border-radius:60px;
+    -moz-border-radius:60px;
+  border: rgb(218, 15, 32);
   display: none;
   position: fixed;
   bottom: 20px;
   right: 30px;
   z-index: 99;
   font-size: 18px;
-  border: none;
   outline: none;
-  background-color: red;
+  background-color: rgb(218, 15, 32);
   color: white;
   cursor: pointer;
   padding: 15px;
-  border-radius: 4px;
+  transition: all ease 0.3s;
 }
 
 #myBtn:hover {
-  background-color: #555;
+  background-color: rgb(13, 10, 163);
 }
