--- a/css/contributors.css
+++ b/css/contributors.css
@@ -93,7 +93,7 @@ body {
 }
 #back-to-top-btn:hover,
 #back-to-top-btn:focus {
-  background: 'transparent';
+  background: "transparent";
   border: 2px solid rgba(255, 255, 255, 0.2);
   transform: translateY(-7px);
   transition: 0.5s;
@@ -165,7 +165,9 @@ a:hover {
   text-overflow: ellipsis;
   overflow: hidden;
   white-space: nowrap;
-  transition: color 0.5s ease-in;
+  /* transition: color 0.5s ease-in; */
+  letter-spacing: 0px;
+  transition: letter-spacing 0.5s;
 }
 
 @media (min-width: 768px) {
@@ -195,6 +197,9 @@ a:hover {
 
 .box-item:hover {
   color: #fff;
+  letter-spacing: 2px;
+  font-weight: bold;
+  transition: left 1s cubic-bezier(0.86, 0, 0.07, 1);
 }
 
 .box-item::before {
@@ -230,6 +235,7 @@ a:hover {
 
 .box-item:hover::after {
   left: calc(0% - 10px);
+
   transition: left 0.8s cubic-bezier(0.86, 0, 0.07, 1);
 }
 
@@ -251,6 +257,10 @@ a:hover {
 
 .box-item:hover a {
   color: #fff;
+}
+
+.box-item:hover a span {
+  letter-spacing: 4px;
 }
 
 .box-item.different-color {
@@ -693,7 +703,8 @@ body {
   color: white;
   cursor: pointer;
   padding: 15px;
-  border-radius: 4px;
+  border-radius: 50%;
+  width: 60px;
 }
 
 #myBtn:hover {
