--- a/css/footer.css
+++ b/css/footer.css
@@ -6,7 +6,7 @@
     /* height: 100px; */
     background: linear-gradient(to left, #FF0844, #FF4563);
     box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
-    color: white;
+    color: wheat;
     text-align: center;
     z-index: 1000;
 }
