--- a/css/contributors.css
+++ b/css/contributors.css
@@ -65,7 +65,17 @@ body {
   padding: 0 0 1.5rem;
   position: relative;
   font-family: "Open Sans", sans-serif;
-  font-size: 16px;
+  font-size: 13px;
+}
+body {
+  margin: 0;
+  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
+  font-size: 1rem;
+  font-weight: 500;
+  line-height: 1.5;
+  color: #212529;
+  text-align: left;
+  background-color: #fff;
 }
 #back-to-top-btn {
   z-index: 1000;
