added social media icons in the footer  and styled them

--- a/Program's_Contributed_By_Contributors/HTML Designs/E-commerce Website/style.css
+++ b/Program's_Contributed_By_Contributors/HTML Designs/E-commerce Website/style.css
@@ -513,3 +513,12 @@ form a{
         line-height: 32px;
     }
     }
+
+#social-media i{
+    margin-left: 10px;
+}
+
+#social-media i:hover{
+    cursor: pointer;
+    color: #fff;
+}
