--- a/css/contributors.css
+++ b/css/contributors.css
@@ -589,6 +589,7 @@ body {
   border-radius: var(--toggleHeight);
   transition: all 0.5s ease-in-out;
   background: var(--bgColor--night);
+  cursor: pointer;
 }
 .day {
   background: #ffbf71;
