--- a/css/contributors.css
+++ b/css/contributors.css
@@ -63,7 +63,7 @@ body{
     margin:0;
     font-family:-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,'Helvetica Neue',Arial,sans-serif,'Apple Color Emoji','Segoe UI Emoji','Segoe UI Symbol','Noto Color Emoji';
     font-size:1rem;
-    font-weight:500;
+    font-weight:350;
     line-height:1.5;
     color:#212529;
     text-align:left;
@@ -85,7 +85,7 @@ body{
     border-radius:25%;
     transition-duration:.2s;
     transition-timing-function:ease-in-out;
-    transition-property:background,color;
+    transition-property:var(--bgColor--day);
     transform:translateY(7px);
     transition:.5s
 }
