--- a/css/style.css
+++ b/css/style.css
@@ -15,8 +15,8 @@ body {
   font-family: Montserrat, sans-serif;
 }
 .container {
-  width: 400px;
-  height: 550px;
+  width: 28rem;
+  height: 34rem;
   background-color: #fff;
   display: flex;
   flex-direction: column;
@@ -24,24 +24,24 @@ body {
   align-items: center;
 }
 #top {
-  top: -7px;
-  left: -5.6px;
+  top: -0.4rem;
+  left: -0.35rem;
 }
 #bottom {
-  bottom: -5px;
-  left: -5.6px;
+  bottom: -0.3rem;
+  left: -0.35rem;
 }
 input[type="range"]::-webkit-slider-runnable-track {
   cursor: pointer;
   background-color:blue;
-  border-radius: 5px;
-  height: 10px;
+  border-radius: 0.3rem;
+  height: 0.6rem;
 }
 input[type="range"]::-webkit-slider-thumb {
   background-color:grey;
   color:navy;
   cursor: hand;
-  margin-top: -3px;
+  margin-top: -0.1rem;
 }
 h4 {
   text-shadow: 0.2px 0.2px 14px #ff1493;
@@ -50,9 +50,9 @@ h4 {
   background-color: blue;
   color: grey;
   text-align: center;
-  padding: 20px 40px;
-  width: 350px;
-  height: 130px;
+  padding: 1.25rem 2.5rem;
+  width: 21.87rem;
+  height: 8.1rem;
 }
 
 
