--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,7 @@ body {
   flex-direction: column;
   height: 100vh;
   margin: 0;
+  padding:0;
   font-family: Montserrat, sans-serif;
 }
 .container {
